--- a/about.html
+++ b/about.html
@@ -47,13 +47,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- <a class="navbar-brand" href="index.html"><img src="">NU World Cup 2017</a> -->
-                <a class="navbar-brand wicked" href="index.html">Wicked Cup</a>
+                <a class="navbar-brand" href="index.html"><img src="">NU World Cup 2018</a>
+                <!-- <a class="navbar-brand wicked" href="index.html">Wicked Cup</a> -->
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 <!--                  <li><a target=_blank href="../img/GamesPacket2017.pdf">Rules and Regulation</a></li>-->
+                  <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/1pzwN_6fU9-rza9N7sXHmWnkk7cds-X8QTMcWp9qtYiM/viewform?edit_requested=true">FIFA Tournament</a></li>
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
@@ -61,7 +62,7 @@
                   <li><a href="sponsors.html">Sponsors</a></li>
                   <li><a href="gallery.html">Gallery</a></li>
 
-                  <li><a href="info.html">Tournament Information</a></li>
+                  <!-- <li><a href="info.html">Tournament Information</a></li> -->
 <!--                    <li><a href="sponsors.html">Sponsors</a></li>-->
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
