--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- <a class="navbar-brand" href="index.html">NU World Cup 2017</a> -->
-                <a class="navbar-brand wicked" href="index.html">Wicked Cup</a>
+                <a class="navbar-brand" href="index.html">NU World Cup 2018</a>
+                <!-- <a class="navbar-brand wicked" href="index.html">Wicked Cup</a> -->
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 <!--                    <li><a target=_blank href="../img/GamesPacket2017.pdf">Rules and Regulation</a></li>-->
+                    <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/1pzwN_6fU9-rza9N7sXHmWnkk7cds-X8QTMcWp9qtYiM/viewform?edit_requested=true">FIFA Tournament</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
@@ -50,7 +51,7 @@
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
 
-                    <li><a href="info.html">Tournament Information</a></li>
+                    <!-- <li><a href="info.html">Tournament Information</a></li> -->
 <!--                    <li><a href="sponsors.html">Sponsors</a></li>-->
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -62,7 +63,7 @@
 <!--     <h2><a target=_blank class="col-md-4 col-md-offset-4" style="text-align:center; color:#000; text-decoration:underline;" href="https://docs.google.com/forms/d/e/1FAIpQLSeh6sSADOYs07K36-xYYsb2g46OhGLH7doGZOj5c5QXO5j21Q/viewform">Register Here!</a></h2> -->
 
 <div class="home-content">
-    <div class=""><img class="main-logo" src="img/wickedcuplogo.png"></div>
+    <div class=""><img class="main-logo" src="img/nuwclogo.jpg"></div>
 
     <!-- <div class="container">
         <div class="row">
@@ -75,7 +76,7 @@
         </div>
     </div> -->
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn5gcYZikJHlwaaEm-IX8VBlD0a40GTqsSrGRv9AAO7K8Xpg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" id="iFrame1">Loading...</iframe>
+    <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn5gcYZikJHlwaaEm-IX8VBlD0a40GTqsSrGRv9AAO7K8Xpg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" id="iFrame1">Loading...</iframe> -->
 <!-- width="760" height="500" -->
 </div>
         
