--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Contact Us - NU World Cup 2017</title>
+    <title>Contact Us - NU World Cup 2018</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/png" href="img/korea-japan-favicon.png">
+    <link rel="icon" type="image/png" href="img/nuwclogo.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
