--- a/faq.html
+++ b/faq.html
@@ -10,10 +10,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>NU World Cup 2017</title>
+    <title>NU World Cup 2018</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/ico" href="img/korea-japan-favicon.png">
+    <link rel="icon" type="image/ico" href="img/nuwclogo.jpg">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
