--- a/sponsors.html
+++ b/sponsors.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sponsors - NU World Cup 2017</title>
+    <title>Sponsors - NU World Cup 2018</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/png" href="img/korea-japan-favicon.png">
+    <link rel="icon" type="image/png" href="img/nuwclogo.jpg">
     <!-- Font links -->
 
     <!-- Custom Fonts -->
