--- a/gallery.html
+++ b/gallery.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Gallery - NU World Cup 2017</title>
+    <title>Gallery - NU World Cup 2018</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Favicon link -->
-    <link rel="icon" type="image/png" href="img/korea-japan-favicon.png">
+    <link rel="icon" type="image/png" href="img/nuwclogo.jpg">
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
