updated tournament information and took off fifa link

--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 <!--                  <li><a target=_blank href="../img/GamesPacket2017.pdf">Rules and Regulation</a></li>-->
-                  <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/1pzwN_6fU9-rza9N7sXHmWnkk7cds-X8QTMcWp9qtYiM/viewform?edit_requested=true">FIFA Tournament</a></li>
+                  <!-- <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/1pzwN_6fU9-rza9N7sXHmWnkk7cds-X8QTMcWp9qtYiM/viewform?edit_requested=true">FIFA Tournament</a></li> -->
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
@@ -79,7 +79,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    Registration is  <strong>Monday, February 13th</strong> at <strong>12 pm</strong>.
+                    Registration is  <strong>March 5</strong> at <strong>7 pm</strong>.
                 </div>
             </div>
         </div>
@@ -91,7 +91,10 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
                 <div class="panel-body">
-                    The minimum number of players is <strong>10</strong> and max is <strong>16</strong>.
+                    For the co-ed tournament, the minimum number of players is <strong>10</strong> and max is <strong>16</strong>.
+                </div>
+                <div class="panel-body">
+                    For the women's tournament, the minimum number of players is <strong>6</strong> and max is <strong>8</strong>.
                 </div>
             </div>
         </div>
@@ -103,7 +106,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                    If you are the team captain, you will need the names and <strong>emails</strong> of the 10 to 16 players that you plan on registering and 3 possible <strong>country names</strong> you would like your team to be called.
+                    If you are the team captain, you will need the names and <strong>emails</strong> of the players that you plan on registering and 3 possible <strong>country names</strong> you would like your team to be called.
                 </div>
             </div>
         </div>
@@ -195,7 +198,7 @@
             </div>
             <div id="collapseTen" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Both tournaments will be on Friday April 21st and Saturday April 22nd, on the fields by the Lakeside. 
+                    Both tournaments will be in early May, on the fields by the Lakeside.
                 </div>
             </div>
         </div>
@@ -207,7 +210,7 @@
             </div>
             <div id="collapseEleven" class="panel-collapse collapse">
                 <div class="panel-body">
-                    The Co-Ed tournament will be 40 teams divided into 10 groups. There will be group stages and then elimination bracket, just like FIFA World Cup. The Women's tournament will have 8 teams split into 2 groups. 
+                    The Co-Ed tournament will be 40 teams divided into 10 groups. There will be group stages and then elimination bracket, just like FIFA World Cup. The Women's tournament will have 8 teams split into 2 groups.
                 </div>
             </div>
         </div>
