--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 <!--                    <li><a target=_blank href="../img/GamesPacket2017.pdf">Rules and Regulation</a></li>-->
-                    <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/1pzwN_6fU9-rza9N7sXHmWnkk7cds-X8QTMcWp9qtYiM/viewform?edit_requested=true">FIFA Tournament</a></li>
+                    <!-- <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/1pzwN_6fU9-rza9N7sXHmWnkk7cds-X8QTMcWp9qtYiM/viewform?edit_requested=true">FIFA Tournament</a></li> -->
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
@@ -72,14 +72,14 @@
                 <p class="small-info">April 21st - 22nd, Lakeside Field</p>
             </div>
             <div class="col-md-3"></div>
-            
+
         </div>
     </div> -->
 
     <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn5gcYZikJHlwaaEm-IX8VBlD0a40GTqsSrGRv9AAO7K8Xpg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" id="iFrame1">Loading...</iframe> -->
 <!-- width="760" height="500" -->
 </div>
-        
+
 
     <!-- <div class=vid-container>
         <h1>Last year's highlights</h1>
