--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body>
+<body class="black-background">
 
     <!-- Navigation -->
     <nav class="navbar navbar-home navbar-inverse navbar-fixed-top" role="navigation">
@@ -63,18 +63,18 @@
 <!--     <h2><a target=_blank class="col-md-4 col-md-offset-4" style="text-align:center; color:#000; text-decoration:underline;" href="https://docs.google.com/forms/d/e/1FAIpQLSeh6sSADOYs07K36-xYYsb2g46OhGLH7doGZOj5c5QXO5j21Q/viewform">Register Here!</a></h2> -->
 
 <div class="home-content">
-    <div class=""><img class="main-logo" src="img/nuwclogo.jpg"></div>
+    <div class=""><img class="main-logo" src="img/wc-logo-mexico.png"></div>
 
-    <!-- <div class="container">
+    <div class="container">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <p class="small-info">April 21st - 22nd, Lakeside Field</p>
+                <p class="small-info">Early May, Lakeside Field</p>
             </div>
             <div class="col-md-3"></div>
 
         </div>
-    </div> -->
+    </div>
 
     <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn5gcYZikJHlwaaEm-IX8VBlD0a40GTqsSrGRv9AAO7K8Xpg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" id="iFrame1">Loading...</iframe> -->
 <!-- width="760" height="500" -->
