--- a/faq.html
+++ b/faq.html
@@ -130,10 +130,12 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse">
                 <div class="panel-body">
-                    No worries! There is <strong>individual player registration</strong> for both the Co-Ed and Women's tournaments! That means that teams that are in need of more players will be calling on you to join them. You can find the registration form for individual registration in the same place as for teams. Check out the <a href="./register.html">register</a> tab.
+                    No worries! There is <strong>individual player registration</strong> for both the Co-Ed and Women's tournaments! That means that teams that are in need of more players will be calling on you to join them. You can find the registration form for individual registration in the same place as for teams.
                 </div>
             </div>
         </div>
+
+         <!-- Check out the <a href="./register.html">register</a> tab. -->
 
         <div class="faqHeader">Game Play</div>
 
