--- a/faq.html
+++ b/faq.html
@@ -94,7 +94,7 @@
                     For the co-ed tournament, the minimum number of players is <strong>10</strong> and max is <strong>16</strong>.
                 </div>
                 <div class="panel-body">
-                    For the women's tournament, the minimum number of players is <strong>6</strong> and max is <strong>8</strong>.
+                    For the women's tournament, the minimum number of players is <strong>6</strong>.
                 </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse">
                 <div class="panel-body">
-                    There is <strong>individual player registration</strong> for Women's tournament! That means that teams that are in need of more players will be calling on you to join them. You can find the registration form for individual registration in the same place as for teams.
+                    There is <strong>individual player registration</strong> for the Women's tournament! That means that teams that are in need of more players will be calling on you to join them. You can find the registration form for individual registration in the same place as for teams.
                 </div>
             </div>
         </div>
