--- a/faq.html
+++ b/faq.html
@@ -118,7 +118,7 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Your team will be added to the waitlist. Get to registration quick, it fills up fast!
+                    Your team will be added to the waitlist. Get to registration quick, it fills up fast! Once 40 teams have registered, we will start a waitlist for all subsequent registrants. We have had teams initially on the waitlist play in the tournament in previous years, so if you're on the wait list, you're not out of luck!
                 </div>
             </div>
         </div>
@@ -134,6 +134,34 @@
                 </div>
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Can I play if I don't go to Northwestern?</a>
+                </h4>
+            </div>
+            <div id="collapseSix" class="panel-collapse collapse">
+                <div class="panel-body">
+                    There is a maximum of <strong>2 non-NU players</strong> per team (Northwestern Alumni count as NU players).
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Can players switch teams?</a>
+                </h4>
+            </div>
+            <div id="collapseSeven" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Team switches will be permitted until the <strong>first week of April</strong>.
+                </div>
+            </div>
+        </div>
+
+
+
+
 
          <!-- Check out the <a href="./register.html">register</a> tab. -->
 
@@ -143,36 +171,39 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">How many players can be on the field at once?</a>
-                </h4>
-            </div>
-            <div id="collapseSix" class="panel-collapse collapse">
-                <div class="panel-body">
-                    The games are run 7 on 7. If you have less than 5 players than you forfeit the match.
-                </div>
-            </div>
-        </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">How many club players can play?</a>
-                </h4>
-            </div>
-            <div id="collapseSeven" class="panel-collapse collapse">
-                <div class="panel-body">
-                    In the Co-Ed tournament there is a max of 2 (PAST or PRESENT) club players allowed on a team roster. For the Women's tournament there is a max of 3 club players allowed.
-                </div>
-            </div>
-        </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Can a player play in the Co-Ed and Women's tournament?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">How many players can be on the field at once?</a>
                 </h4>
             </div>
             <div id="collapseEight" class="panel-collapse collapse">
+                <div class="panel-body">
+                    The co-ed games are run <strong>7 on 7</strong>. If you have less than 5 players than you forfeit the match.
+                </div>
+                <div class="panel-body">
+                    The women's games are run <strong>5 on 5</strong>.
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">How many club players can play?</a>
+                </h4>
+            </div>
+            <div id="collapseNine" class="panel-collapse collapse">
+                <div class="panel-body">
+                    In the Co-Ed tournament there is a max of <strong>2</strong> (PAST or PRESENT) club players allowed on a team roster. For the Women's tournament there is a max of <strong>3</strong> club players allowed.
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Can a player play in the Co-Ed and Women's tournament?</a>
+                </h4>
+            </div>
+            <div id="collapseTen" class="panel-collapse collapse">
                 <div class="panel-body">
                     Yes! That's allowed, but if both your teams are playing at the same time you will have to choose to play for only one.
                 </div>
@@ -183,22 +214,22 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">How much does it cost to play?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">How much does it cost to play?</a>
                 </h4>
             </div>
-            <div id="collapseNine" class="panel-collapse collapse">
+            <div id="collapseEleven" class="panel-collapse collapse">
                 <div class="panel-body">
-                    For the Co-ed tournament each player pays $10 and for the Women's each player pays $5. Each team is asked to raise $100 for Gonzo Soccer as well. Check out <a href=gonzo.html>Gonzo</a> to learn more about the program we are donating to!
+                    For the Co-ed tournament each player pays <strong>$10</strong> and for the Women's each player pays <strong>$5</strong>. Each team is required to raise <strong>$100</strong> for Gonzo Soccer as well. Failure to raise the required amount by <strong>April 5th at 11:59pm</strong> may result in expulsion from the tournament. Check out <a href=gonzo.html>Gonzo</a> to learn more about the program we are donating to!
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Where and when is the tournament?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">Where and when is the tournament?</a>
                 </h4>
             </div>
-            <div id="collapseTen" class="panel-collapse collapse">
+            <div id="collapseTwelve" class="panel-collapse collapse">
                 <div class="panel-body">
                     Both tournaments will be in early May, on the fields by the Lakeside.
                 </div>
@@ -207,10 +238,10 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">What is the tournament structure?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen">What is the tournament structure?</a>
                 </h4>
             </div>
-            <div id="collapseEleven" class="panel-collapse collapse">
+            <div id="collapseThirteen" class="panel-collapse collapse">
                 <div class="panel-body">
                     The Co-Ed tournament will be 40 teams divided into 10 groups. There will be group stages and then elimination bracket, just like FIFA World Cup. The Women's tournament will have 8 teams split into 2 groups.
                 </div>
