--- a/gonzo.html
+++ b/gonzo.html
@@ -55,6 +55,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 <!--                  <li><a target=_blank href="../img/GamesPacket2017.pdf">Rules and Regulation</a></li>-->
+                  <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/e/1FAIpQLScGT5Tixd34DGND3-FjEh32OLnxeHTcrC-eMIBcBLzBeIxGqg/viewform?usp=sf_link">Register</a></li>
                   <!-- <li><a id="fifa-tourney" href="https://docs.google.com/forms/d/1pzwN_6fU9-rza9N7sXHmWnkk7cds-X8QTMcWp9qtYiM/viewform?edit_requested=true">FIFA Tournament</a></li> -->
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="about.html">About Us</a></li>
